# patina-components

./: Cargo.toml  Makefile.toml  README.md  cspell.yml  deny.toml
.github/workflows/: ci-workflow.yml
patina_boot/: Cargo.toml  README.md
patina_boot/src/: boot_dispatcher.rs  boot_orchestrator.rs  config.rs  connect_controller.rs  helpers.rs  lib.rs  orchestrators.rs  partition.rs  strategies.rs
patina_boot/src/orchestrators/: simple_boot_manager.rs
patina_boot/src/strategies/: connect_all.rs
patina_nvme/: Cargo.toml
patina_nvme/src/: lib.rs  pass_thru.rs
patina_partition/: Cargo.toml
patina_partition/src/: block_io.rs  file_system.rs  lib.rs
patina_ram_disk/: Cargo.toml
patina_ram_disk/src/: lib.rs
placeholder/: Cargo.toml
placeholder/src/: lib.rs
uefi_hid/: Cargo.toml  README.md
uefi_hid/src/: hid.rs  lib.rs  test_stubs.rs
uefi_hid/src/hid_io/: mod.rs  protocol.rs
uefi_hid/src/keyboard/: key_queue.rs  layout.rs  mod.rs  simple_text_in.rs  simple_text_in_ex.rs
uefi_hid/src/pointer/: absolute_pointer.rs  mod.rs
usb_hid/: Cargo.toml  README.md
usb_hid/src/: control_transfers.rs  descriptors.rs  device.rs  driver.rs  hid_io_impl.rs  interrupt_transfers.rs  lib.rs  test_stubs.rs  usb_hid_defs.rs
