[workspace]
resolver = "3"
members = ["uefi_hid", "usb_hid"]

[workspace.package]
version = "0.0.1"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.89"
description = "Patina components"
repository = "https://github.com/OpenDevicePartnership/patina-components"

[workspace.dependencies]
hidparser = { version = "1" }
log = { version = "0.4", default-features = false }
mockall = { version = "0.13.0" }
num_enum = { version = "0.7", default-features = false }
# git path is a temporary placeholder until the appropriate protocol branches are checked in upstream.
patina = { git = "https://github.com/joschock/patina", branch = "usb_hid_protocol_defs" }
r-efi = { version = "5.0.0", default-features = false }
scroll = { version = "0.13", default-features = false, features = ["derive"] }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
