[workspace]
resolver = "3"
members = ["patina_boot"]

[workspace.package]
version = "0.0.1"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.89"
description = "Patina components"
repository = "https://github.com/OpenDevicePartnership/patina-components"

[workspace.dependencies]
log = { version = "0.4", default-features = false }
mockall = { version = "0.13" }
r-efi = { version = "5", default-features = false }
spin = { version = "0.12", default-features = false, features = ["spin_mutex"] }
zerocopy = { version = "0.8", default-features = false }
zerocopy-derive = { version = "0.8" }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
