[package]
name = "patina_partition"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Generic UEFI partition I/O helpers for Patina firmware (BlockIo, SimpleFileSystem)."

[lints]
workspace = true

[dependencies]
log = { version = "0.4", default-features = false }
# patina is pulled from feature/patina-boot until a patina release containing the required
# APIs (DevicePathBuf, etc.) is published to crates.io.
patina = { git = "https://github.com/OpenDevicePartnership/patina", branch = "feature/patina-boot", features = ["unstable-device-path"] }
r-efi = { version = "5", default-features = false }

[dev-dependencies]
patina = { git = "https://github.com/OpenDevicePartnership/patina", branch = "feature/patina-boot", features = ["mockall", "unstable-device-path"] }

[features]
default = []
doc = []
std = []
